# ChidamberAndKemerer

./: .gitignore  CMakeLists.txt  analyser.cpp  analyser.h  c_and_k.cpp  c_and_k.h  class_information_package.cpp  class_information_package.h  code.txt  main.cpp  preprocessor.cpp  preprocessor.h  reg_expressions.h  types.h
